# ghostgap

./: .gitignore  README.md  ghostgap-safe.sh  pyproject.toml
.github/workflows/: ghostgap.yml  tests.yml
src/ghostgap/: __init__.py  cli.py  core.py  launcher.py
tests/: test_core.py  test_coverage.py  test_design_fixes.py  test_fixes.py  test_pth_safety.py  test_remaining_gaps.py
