[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostgap"
version = "1.1.0"
description = "Supply Chain Firewall — block compromised packages, close the Ghost Gap, cure infections. Zero dependencies."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    {name = "Vezran x taazbro"},
]
keywords = [
    "security", "supply-chain", "pip", "npm", "vulnerability",
    "litellm", "backdoor", "credential-theft", "ghost-gap",
    "firewall", "package-scanner", "ci-cd", "ghostgap",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/Vezran/ghostgap"
Documentation = "https://github.com/Vezran/ghostgap#readme"
Repository = "https://github.com/Vezran/ghostgap"
Issues = "https://github.com/Vezran/ghostgap/issues"

[project.scripts]
ghostgap = "ghostgap.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
markers = ["slow: marks tests that require network or long execution"]
